# AdventOfCode

./: .gitignore  .gitmodules  README.md  pyproject.toml
2024/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb
2024/jupyter/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  17.ipynb  18.ipynb  19.ipynb  pyproject.toml  template.ipynb
2024/jupyter/lib/: __init__.py  constants.py  grid.py  loader.py
aoc/2024/: 01.ipynb  02.ipynb  03.ipynb  06.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb
aoc/lib/: constants.py  grid.py  loader.py
lib/: __init__.py  constants.py  decorators.py  grid.py  loader.py
