[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Joerg Neulist <wsl.yoga@joerg.neulist.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.4.2"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
